--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 
 <head>
+  <script src="utils.js"></script>
   <script src="moving_object.js"></script>
   <script src="asteroid.js"></script>
   <script src="game.js"></script>
   <script src="ship.js"></script>
   <script src="bullet.js"></script>
-  <script src="keymaster.js"></script>
+  <script src="vendor/keymaster.js"></script>
 </head>
 
 <body>
@@ -30,9 +31,6 @@
 
     AsteroidsGame.currentGame = new AsteroidsGame.Game(ctx)
     AsteroidsGame.currentGame.start();
-
-    // var asteroid = new AsteroidsGame.Asteroid([250,250], [0,0]);
-    // asteroid.draw(ctx);
   </script>
 </body>
 </html>
