--- a/index.html
+++ b/index.html
@@ -1,36 +1,37 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-  <script src="utils.js"></script>
-  <script src="moving_object.js"></script>
-  <script src="asteroid.js"></script>
-  <script src="game.js"></script>
-  <script src="ship.js"></script>
-  <script src="bullet.js"></script>
-  <script src="vendor/keymaster.js"></script>
-</head>
+	<head>
+	  <script src="lib/utils.js"></script>
+	  <script src="lib/moving_object.js"></script>
+	  <script src="lib/asteroid.js"></script>
+	  <script src="lib/game.js"></script>
+	  <script src="lib/ship.js"></script>
+	  <script src="lib/bullet.js"></script>
+	  <script src="vendor/keymaster.js"></script>
+	</head>
 
-<body>
-  <style>
-    canvas {
-      border: 1px solid;
-      height: 500px;
-      width: 500px;
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-    }
-  </style>
+	<body>
+	  <style>
+	    canvas {
+	      border: 1px solid;
+	      height: 500px;
+	      width: 500px;
+	      display: block;
+	      margin-left: auto;
+	      margin-right: auto;
+	    }
+	  </style>
 
-  <canvas width="500" height="500" id="canvas"></canvas>
+	  <canvas width="500" height="500" id="canvas"></canvas>
 
-  <script>
-    var canvas = document.getElementById('canvas');
-    var ctx = canvas.getContext('2d');
+	  <script>
+	    var canvas = document.getElementById('canvas');
+	    var ctx = canvas.getContext('2d');
 
-    AsteroidsGame.currentGame = new AsteroidsGame.Game(ctx)
-    AsteroidsGame.currentGame.start();
-  </script>
-</body>
+	    AsteroidsGame.currentGame = new AsteroidsGame.Game(ctx)
+	    AsteroidsGame.currentGame.start();
+	  </script>
+	</body>
+	
 </html>
