--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	      border: 1px solid;
 	      height: 500px;
 	      width: 500px;
+		  background: black;
 	      display: block;
 	      margin-left: auto;
 	      margin-right: auto;
