--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	      border: 1px solid;
 	      height: 500px;
 	      width: 500px;
-		  background: black;
+		    background: white;
 	      display: block;
 	      margin-left: auto;
 	      margin-right: auto;
@@ -34,5 +34,5 @@
 	    AsteroidsGame.currentGame.start();
 	  </script>
 	</body>
-	
+
 </html>
