--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	  <script src="lib/game.js"></script>
 	  <script src="lib/ship.js"></script>
 	  <script src="lib/bullet.js"></script>
-	  <script src="vendor/keymaster.js"></script>
+	  <script src="vendor/jquery.min.js"></script>
+    <script src="vendor/keymaster.js"></script>
 	</head>
 
 	<body>
