two computers playing each other and a sick story

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 	      border: 1px solid;
 	      height: 500px;
 	      width: 500px;
-		    background: white;
+		  background: white;
 	      display: block;
-	      margin-left: auto;
-	      margin-right: auto;
+	      margin: 40px auto;
 	    }
 		
-		p {
-			font-family: sans-serif;
+		body {
+			font-family: "Helvetica", sans-serif;
+			text-align: justify;
 			width: 500px;
 			margin: auto;
 		}
@@ -43,9 +43,20 @@
 	    AsteroidsGame.currentGame.start();
 	  </script>
 	  
-	  <p>Player 1: Arrow Keys + Spacebar to shoot.</p>
-	  <p>Player 2: WASD + 1 to shoot.</p>
-	  <p>Click <a href="http://www.mickeysanchez.com/asteroids">here</a> for single player.</p>
+	  <p><strong>Welcome to the Colorverse.</strong>
+		 The Blues have been mining color-asteroids 
+	  	 in this sector for years. But on stardate zero-zero-five-two
+	     they encountered an unknown enemy for the first time... the Reds. </p>
+	  
+	  <p>Controls: Arrow Keys + Spacebar to shoot.</p>
+	  
+	  <p>Click <a href="http://www.mickeysanchez.com/asteroids">here</a> 
+		 when you feel ready to take control of the fastest, 
+		 most well-armed Blue ship.</p>
+	  
+	  <p>(Bonus: This game supports gamepads on Google Chrome. Just 
+		  plug in and play!)</p>
 	</body>
+
 
 </html>
