--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@
 	<body>
 	  <style>
 	    canvas {
-	      border: 1px solid;
+	      border: 3px solid;
 	      height: 500px;
 	      width: 500px;
-		  background: white;
+		  background: #393945;
 	      display: block;
 	      margin: 40px auto;
 	    }
 		
 		body {
+			background: lightblue;
 			font-family: "Helvetica", sans-serif;
 			text-align: justify;
 			width: 500px;
@@ -43,16 +44,13 @@
 	    AsteroidsGame.currentGame.start();
 	  </script>
 	  
-	  <p><strong>Welcome to the Colorverse.</strong>
-		 The Blues have been mining color-asteroids 
+	  <p><strong>Welcome to the Colorverse.</strong></p>
+	  <p>
+		 The Blues have been mining color-rich asteroids 
 	  	 in this sector for years. But on stardate zero-zero-five-two
 	     they encountered an unknown enemy for the first time... the Reds. </p>
 	  
 	  <p>Controls: Arrow Keys + Spacebar to shoot.</p>
-	  
-	  <p>Click <a href="http://www.mickeysanchez.com/asteroids">here</a> 
-		 when you feel ready to take control of the fastest, 
-		 most well-armed Blue ship.</p>
 	  
 	  <p>(Bonus: This game supports gamepads on Google Chrome. Just 
 		  plug in and play!)</p>
