--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 	<head>
-	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>	
+	  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>	
 		
 	  <script src="lib/utils.js"></script>
 	  <script src="lib/moving_object.js"></script>
