--- a/index.html
+++ b/index.html
@@ -2,65 +2,90 @@
 <html>
 
 <head>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>	
+<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>	
+
+<script src="lib/utils.js"></script>
+<script src="lib/moving_object.js"></script>
+<script src="lib/asteroid.js"></script>
+<script src="lib/game.js"></script>
+<script src="lib/ship.js"></script>
+<script src="lib/computer_ship.js"></script>
+<script src="lib/bullet.js"></script>
+  
+<style>
+	body {
+	  background: url(bg_gradient.jpg) no-repeat center center fixed;
+	  background-size: cover;
+	  font-family: "Montserrat", sans-serif;
+	}
+
+	h1 {
+	  margin: 20px 0;
+	}
+
+	canvas {
+	  border: 5px solid;
+	  height: 500px;
+	  width: 500px;
+	  background: #393945;
+	  margin-right: 20px;
+	  float: left;
+	}
 	
-  <script src="lib/utils.js"></script>
-  <script src="lib/moving_object.js"></script>
-  <script src="lib/asteroid.js"></script>
-  <script src="lib/game.js"></script>
-  <script src="lib/ship.js"></script>
-  <script src="lib/computer_ship.js"></script>
-  <script src="lib/bullet.js"></script>
+	h2 {
+      font-size: 18px;
+	  margin: 0;
+	}
+
+	section {
+	  width: 300px;
+	  float: left;
+	}
+	
+	p {
+      margin: 20px 0px;
+	  padding: 0;
+	}
+</style>
 </head>
 
 <body>
-	<style>
-		canvas {
-		  border: 3px solid;
-		  height: 500px;
-		  width: 500px;
-		  background: #393945;
-		  display: block;
-		  margin: 40px auto;
-		}
 
-		body {
-		  background: lightblue;
-		  font-family: "Helvetica", sans-serif;
-		  text-align: justify;
-		  width: 500px;
-		  margin: auto;
-		}
-	</style>
-
+<main>
+	<h1>Battle For The Colorverse</h1>
+		
 	<canvas width="500" height="500" id="canvas"></canvas>
 
-	<script>
-		var canvas = document.getElementById('canvas');
-		var ctx = canvas.getContext('2d');
+	<section>
+		
+		<h2>Welcome to the Colorverse.</h2>
 
-		AsteroidsGame.currentGame = new AsteroidsGame.Game(ctx)
-		AsteroidsGame.currentGame.start();
-	</script>
+		<p>
+			 The Blues have been mining color-rich asteroids 
+			 in this sector for years. But on stardate zero-zero-five-two
+			 they encountered an unknown enemy for the first time... the Reds. 
+		</p>
 
-	<p>
-		<strong>Welcome to the Colorverse.</strong>
-	</p>
-	
-	<p>
-		 The Blues have been mining color-rich asteroids 
-		 in this sector for years. But on stardate zero-zero-five-two
-		 they encountered an unknown enemy for the first time... the Reds. 
-	</p>
+		<p>
+			 Controls: Arrow Keys + Spacebar to shoot.
+		</p>
 
-	<p>
-		 Controls: Arrow Keys + Spacebar to shoot.
-	</p>
-
-	<p>
-		 (Bonus: This game supports gamepads on Google Chrome. Just 
-		  plug in and play!)
-	</p>
+		<p>
+			 (Bonus: This game supports gamepads on Google Chrome. Just 
+			  plug in and play!)
+		</p>
+	</section>
+</main>
 
 </body>
+
+<script>
+	var canvas = document.getElementById('canvas');
+	var ctx = canvas.getContext('2d');
+
+	AsteroidsGame.currentGame = new AsteroidsGame.Game(ctx)
+	AsteroidsGame.currentGame.start();
+</script>
+
 </html>
