working on fixing border bug

--- a/index.html
+++ b/index.html
@@ -68,12 +68,14 @@
 		</p>
 
 		<p>
-			 Controls: Arrow Keys + Spacebar to shoot.
+			 <strong>Controls:</strong> <br>
+			 Arrow Keys + Spacebar to shoot.
 		</p>
 
 		<p>
-			 (Bonus: This game supports gamepads on Google Chrome. Just 
-			  plug in and play!)
+			  <strong>Bonus:</strong> <br> 
+			  This game supports gamepads on Google Chrome. Just 
+			  plug in and play!
 		</p>
 	</section>
 </main>
