finally fixes out of bounds bug

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	  background: url(bg_gradient.jpg) no-repeat center center fixed;
 	  background-size: cover;
 	  font-family: "Montserrat", sans-serif;
+	  padding: 40px;
 	}
 
 	h1 {
@@ -41,6 +42,7 @@
 	section {
 	  width: 300px;
 	  float: left;
+	  color: #393945;
 	}
 	
 	p {
@@ -53,7 +55,6 @@
 <body>
 
 <main>
-	<h1>Battle For The Colorverse</h1>
 		
 	<canvas width="500" height="500" id="canvas"></canvas>
 
