adds win by points

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	}
 
 	section {
-	  width: 300px;
+	  width: 350px;
 	  float: left;
 	  color: #393945;
 	}
@@ -72,6 +72,22 @@
 		<p>
 			 <strong>Controls:</strong> <br>
 			 Arrow Keys + Spacebar to shoot.
+		</p>
+		
+		<p>
+			 <strong>Instructions:</strong> <br>
+			 Shoot the enemy ship, or have
+			 more points when all the asteroids are gone to
+			 achieve victory. 
+			 Avoid colliding with asteroids
+			 or being shot!
+		</p>
+		
+		<p>
+			 <strong>Tips:</strong> <br>
+			 You can only shoot when you're moving.
+			 The physics of the Colorverse only allow
+			 two of your bullets to be on the screen at once.
 		</p>
 
 		<p>
