--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <script src="lib/moving_object.js"></script>
 <script src="lib/asteroid.js"></script>
 <script src="lib/game.js"></script>
+<script src="lib/controls.js"></script>
 <script src="lib/ship.js"></script>
 <script src="lib/computer_ship.js"></script>
 <script src="lib/bullet.js"></script>
