--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 	var ctx = canvas.getContext('2d');
 
 	AsteroidsGame.currentGame = new AsteroidsGame.Game(ctx)
-	AsteroidsGame.currentGame.start();
+	AsteroidsGame.currentGame.startScreen();
 </script>
 
 </html>
