refactors start screen to its own file

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <script src="lib/moving_object.js"></script>
 <script src="lib/asteroid.js"></script>
 <script src="lib/game.js"></script>
+<script src="lib/start_screen.js"></script>
 <script src="lib/controls.js"></script>
 <script src="lib/ship.js"></script>
 <script src="lib/computer_ship.js"></script>
